[package]
name = "crypto"
version = "0.1.0"
authors = ["itsViggo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-primes = "0.1.2"
num-bigint = "0.4.0"
ring-algorithm = "0.2.3"
rand = "0.8.0"
mod_exp = "1.0.1"
substring = "1.4.5"